Created Report menustrip item

--- a/Application/BlueBirdSystem/BlueBirdSystem/BlueBirdSystem.csproj
+++ b/Application/BlueBirdSystem/BlueBirdSystem/BlueBirdSystem.csproj
@@ -96,6 +96,12 @@
     <Compile Include="ManageDriversForm.Designer.cs">
       <DependentUpon>ManageDriversForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Report_MonthlyUsesPerServiceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report_MonthlyUsesPerServiceForm.Designer.cs">
+      <DependentUpon>Report_MonthlyUsesPerServiceForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewOrdersForm.cs">
       <SubType>Form</SubType>
     </Compile>
